Change config and photo

--- a/content/config.json
+++ b/content/config.json
@@ -1,20 +1,20 @@
 {
-  "title": "Blog by John Doe",
-  "url": "https://lumen.alxshelepenok.com",
-  "subtitle": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
+  "title": "Hieu's Corner",
+  "url": "https://hieutk.com",
+  "subtitle": "See, Though, Write",
   "copyright": "© All rights reserved.",
   "googleAnalyticsId": "UA-73379983-2",
-  "disqusShortname": "",
+  "disqusShortname": "trankimhieu",
   "postsLimit": 4,
   "pathPrefix": "/",
   "menu": [
     {
-      "label": "Articles",
-      "path": "/"
-    },
-    {
       "label": "About me",
       "path": "/pages/about"
+    },
+    {
+      "label": "Articles",
+      "path": "/"
     },
     {
       "label": "Contact me",
@@ -22,13 +22,13 @@
     }
   ],
   "author": {
-    "name": "John Doe",
-    "photo": "/photo.jpg",
-    "bio": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
+    "name": "Hieu Tran",
+    "photo": "/photo01.jpg",
+    "bio": "Your life does not get better by chance. It gets better by a change",
     "contacts": {
       "rss": "",
-      "email": "",
-      "github": "#",
+      "email": "hieu@hieutk.com",
+      "github": "https://github.com/tkhieu",
       "facebook": "#",
       "telegram": "#",
       "twitter": "#",
