Update new GTag

--- a/content/config.json
+++ b/content/config.json
@@ -3,7 +3,7 @@
   "url": "https://hieutk.com",
   "subtitle": "See, Though, Write",
   "copyright": "© All rights reserved.",
-  "googleAnalyticsId": "UA-73379983-2",
+  "googleAnalyticsId": "G-9YJNP2WWM0",
   "disqusShortname": "trankimhieu",
   "postsLimit": 4,
   "pathPrefix": "/",
