--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gatsby-plugin-sass": "^5.19.0",
     "gatsby-plugin-sharp": "^4.19.0",
     "gatsby-plugin-sitemap": "^5.19.0",
+    "gatsby-plugin-vercel": "^1.0.3",
     "gatsby-remark-autolink-headers": "^5.19.0",
     "gatsby-remark-copy-linked-files": "^5.19.0",
     "gatsby-remark-external-links": "0.0.4",
